--- a/index.html
+++ b/index.html
@@ -7,45 +7,50 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge" />
   <title>Material Design for Bootstrap</title>
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
-  <!-- Google Fonts Roboto -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
-  <!-- Bootstrap core CSS -->
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <!-- Material Design Bootstrap -->
-  <link rel="stylesheet" href="css/mdb.min.css">
+
   <!-- Your custom styles (optional) -->
   <link rel="stylesheet" href="css/style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-  <div class="container my-4">
-    <hr class="mb-5" />
-    <div class="calculator card">
-      <div id="output"></div>
-      <div class="calculator-keys">
-            <button class="btn btn-danger" onclick="addToSum('+')">+</button>
-            <button class="btn " onclick="addToSum('-')">-</button>
-            <button class="btn" onclick="addToSum('*')">*</button>
-            <button class="btn" onclick="addToSum('/')">/</button>
-            <button class="btn" onclick="addToSum('7')">7</button>
-            <button class="btn" onclick="addToSum('8')">8</button>
-            <button class="btn" onclick="addToSum('9')">9</button>
-            <button class="btn" onclick="addToSum('4')">4</button>
-            <button class="btn" onclick="addToSum('5')">5</button>
-            <button class="btn" onclick="addToSum('6')">6</button>
-            <button class="btn" onclick="addToSum('1')">1</button>
-            <button class="btn" onclick="addToSum('2')">2</button>
-            <button class="btn" onclick="addToSum('3')">.</button>
-            <button class="btn" onclick="addToSum('.')">0</button>
-            <button class="btn" onclick="evaluateSum()">=</button>
-            <button class="btn" onclick="clearSum()">CLEAR</button>
-            <!-- <button class="btn" onclick="deleteChar('DEL')">DEL</button> -->
-            
-              <button class="btn  W-200 btn-primary" onclick="deleteChar('DEL')">DEL</button>
-            
-          </div>
-        </div>
-      </div>
+  <body>
+    <div class="container">
+        <div class="calculator">
+            <div id="output" class="calculatorscreen"></div>
+            <div class="calculatorkeys">
+              <div class="container">
+                <div class="row">
+                    <div class="caluclator mx-4">
+                      <div class="col">
+ <button class="btn btn-danger m-2" onclick="addToSum('7')">7</button>
+ <button class="btn btn-danger m-2" onclick="addToSum('8')">8</button>
+ <button class="btn btn-danger m-2" onclick="addToSum('9')">9</button>
+ <button class="btn btn-danger m-2" onclick="addToSum('+')">+</button>
+                       </div>
+ <button class="btn btn-danger m-2" onclick="addToSum('4')">4</button>
+ <button class="btn btn-danger m-2" onclick="addToSum('5')">5</button>
+ <button class="btn btn-danger m-2" onclick="addToSum('6')">6</button>
+ <button class="btn btn-danger m-2" onclick="addToSum('-')">-</button>
+                      <div class="col">
+ <button class="btn btn-danger m-2" onclick="addToSum('1')">1</button>
+ <button class="btn btn-danger m-2" onclick="addToSum('2')">2</button>
+ <button class="btn btn-danger m-2" onclick="addToSum('3')">3</button>
+ <button class="btn btn-danger m-2" onclick="addToSum('*')">*</button>
+                       </div>
+ <button class="btn btn-secondary m-2" onclick="addToSum('.')">.</button>
+ <button class="btn btn-secondary m-2" onclick="addToSum('0')">0</button>
+ <button class="btn btn-secondary m-2" onclick="addToSum('/')">/</button>
+ <button class="btn btn-secondary m-2" onclick="evaluateSum()">=</button>
+
+                      </div>
+                 </div>
+                 <button class="btn-clear btn-dark mx-4 " onclick="deleteChar()">DEL</button>
+                 <button class="btn-clear btn-dark mx-4" onclick="clearSum()">CLEAR</button>
+  <!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="script.js"></script>
+</body>
       <script type="text/javascript" src="js/script.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
